ci: inclusão de relatorio

--- a/.github/workflows/01-manual-exec.yml
+++ b/.github/workflows/01-manual-exec.yml
@@ -25,3 +25,8 @@ jobs:
 
       - name: Testes E2E (end-to-end)
         run: npx cypress run
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: relatorio-de-testes
+          path: ./cypress-report
